syntax = "proto3";

package crud.v1;

option go_package = "github.com/serbanmarti/go-grpc/proto_gen/crud/v1;crudv1";

service CrudService {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Read(ReadRequest) returns (ReadResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message CreateRequest {
  string name = 1;
}

message CreateResponse {
  string id = 1;
}

message ReadRequest {
  string id = 1;
}

message ReadResponse {
  string id = 1;
  string name = 2;
}

message UpdateRequest {
  string id = 1;
  string updated_name = 2;
}

message UpdateResponse {
  string id = 1;
  string name = 2;
}

message DeleteRequest {
  string id = 1;
}

message DeleteResponse {
  string id = 1;
}
